--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "howler": "^2.0.4"
+    "howler": "^2.0.9"
   },
   "devDependencies": {
-    "@types/howler": "^2.0.3"
+    "@types/howler": "^2.0.5",
+    "tslint": "^5.9.1",
+    "typescript": "^2.8.1",
+    "tslint-microsoft-contrib": "^5.0.3"
   }
 }
