--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -3,9 +3,7 @@
     "target": "es5",
     "module": "commonjs",
     "lib": ["es2015", "dom"],
-    "strict": true,
-    "suppressImplicitAnyIndexErrors": true,
-    "baseUrl" : "./typings"
+    "strict": true
   },
   "files": ["index.ts"],
   "compileOnSave": false,
